# vgi-quant

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-entrypoint.sh  pyproject.toml  quant_worker.py  vgi-lint.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
test/sql/: bonds.test  conventions.test  options.test
tests/: test_quant.py  test_scalars.py  test_tables.py
vgi_quant/: __init__.py  meta.py  quant.py  scalars.py  schema_utils.py  tables.py  worker.py
