[project]
name = "vgi-quant"
version = "0.1.0"
description = "Option pricing + Greeks, bond pricing/yield, and day-count math for DuckDB via VGI (QuantLib)"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "quantitative-finance",
    "quantlib",
    "options",
    "black-scholes",
    "greeks",
    "bonds",
    "yield",
    "duration",
    "day-count",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    # Floored at 0.16.0: this worker exposes a browsable Table
    # (day_count_conventions), which is listed over the table-contents RPC.
    # vgi-python 0.15.0 renamed that RPC field (required_field_filter_paths ->
    # required_filters) and the released signed vgi community extension now
    # expects the new name — ATTACH against 0.14.x hard-fails with an
    # out-of-date Apache Arrow schema. 0.16.x is the current release line and the
    # one this worker is tested and locked against.
    "vgi-python>=0.16.0",
    "QuantLib>=1.42",
    "pyarrow",
]

[project.optional-dependencies]
# HTTP transport: the worker can serve over HTTP (`quant_worker.py --http`) in
# addition to stdio. That path needs vgi-python's `http` extra (waitress).
# CI's http transport leg installs this via `uv sync --extra http`.
http = [
    # Kept in lockstep with the base dependency floor above (browsable-Table
    # table-contents RPC schema requires vgi-python >= 0.16.0).
    "vgi-python[http]>=0.16.0",
]
# HTTP-serving extra — installed by the published Docker image (`.[serve]`) so the
# container can serve the worker over HTTP (/health + VGI RPC) via `vgi-serve
# vgi_quant.worker:QuantWorker --http`. Alias of `http`; named `serve` to match the
# fleet-wide Docker convention. A plain stdio install stays lean (no HTTP server).
serve = ["vgi-python[http]>=0.16.0"]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "pydoclint",
]

[project.scripts]
# stdio worker entry point (used by the Docker image's `stdio` transport and by a
# filesystem-LOCATION ATTACH via bin/vgi-quant-worker).
vgi-quant-worker = "vgi_quant.worker:main"

[project.urls]
Repository = "https://github.com/Query-farm/vgi-quant"
Issues = "https://github.com/Query-farm/vgi-quant/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_quant"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
# Docstrings (D) are enforced on the worker package/script (product code), not tests.
"tests/**" = ["D"]
"conftest.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
# Docstring consistency gate (complements ruff's D rules: ruff checks docstring
# shape, pydoclint checks documented args/returns/attrs match the code).
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Genuinely untyped third-party library (no stubs published).
module = ["QuantLib.*"]
ignore_missing_imports = true
